build: Upgrade junit to junit 5